# api_django_drf

./: .gitignore  README.md  nuxt.config.js  package-lock.json  package.json  pyproject.toml
api/: db.sqlite3
api/api/: settings.py  urls.py
api/core/: serializers.py  urls.py  views.py
api/core/migrations/: 0001_initial.py  0002_comment.py
components/: Aside.vue  ExampleComponent.vue  Footer.vue  Navbar.vue  SearchHeader.vue  Slider.vue
layouts/: default.vue
pages/: contact.vue  example.vue  index.vue  search.vue  signin.vue  signout.vue  signup.vue
pages/tags/: _slug.vue
static/css/: style.css
